--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora de Surebet e Freebet</title>
+    <title>Calculadora de Freebet</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Calculadora de Surebet</h1>
+        <h1>Calculadora Aposta Grátis</h1>
         <form id="surebetForm">
             <div class="input-group">
                 <label for="odd1">Odd 1:</label>
@@ -24,7 +24,7 @@
                 <input type="number" step="0.01" id="odd2" name="odd2" oninput="atualizarCalculo()" required>
             </div>
 
-            <button type="button" onclick="atualizarCalculo()">Calcular Surebet</button>
+            <button type="button" onclick="atualizarCalculo()">Calcular</button>
         </form>
 
         <div id="resultado" class="resultado">
